--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Ethan Shapiro # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  I am currently pursuing my Master of Data Science at UCI and recieved my BS in Data Science from UCSD. I have experience with everything from data engineering to machine learning from my various internships.
   <br><br>
-  Second description 
+  I have a passion for gaming and esports, with the goal of making the games fun and exciting and advocating for kind and inclusive gaming communities. 
   <br><br>
   <a href="https://www.linkedin.com/in/ethan-shapiro-dsc/">View My LinkedIn Profile</a> 
   
