--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
 title: Ethan Shapiro # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
+
+  <p align="center">
+  <a href="mailto:enshapir@uci.edu">Email</a> |
+  <a href="https://www.linkedin.com/in/ethan-shapiro-dsc/">LinkedIn</a> |
+  <a href="https://github.com/Ethan-Shapiro">GitHub</a> |
+    <a href="pdf/resume2.pdf">Resume</a>
+  </p>
+
   I am currently pursuing my Master of Data Science at UCI and recieved my BS in Data Science from UCSD. I have experience with everything from data engineering to machine learning from my various internships.
   <br><br>
   I have a passion for gaming and esports, with the goal of making the games fun and exciting and advocating for kind and inclusive gaming communities. 
